
[package]
name = "ipld_hamt-fuzz"
version = "0.0.0"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.0", features = ["derive"] }
ahash = "0.7"
db = { package = "forest_db", path = "../../../node/db" }

[dependencies.ipld_hamt]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "hamt_fuzz"
path = "fuzz_targets/hamt_fuzz.rs"
test = false
doc = false
